# dashcam

./: .gitignore  GestureCamPro.spec  LICENSE  Makefile  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: README.md
docs/: architecture.md  configuration.md  troubleshooting.md
gesturecam/: __init__.py  app.py  errors.py  logging_setup.py  paths.py
gesturecam/audio/: __init__.py  tts.py
gesturecam/camera/: __init__.py  capture.py  enumerate.py  frame.py
gesturecam/config/: __init__.py  manager.py  schema.py
gesturecam/face/: __init__.py  analysis.py  detector.py  mesh.py  types.py
gesturecam/gallery/: __init__.py  service.py
gesturecam/gestures/: __init__.py  classifier.py  landmarks.py  recognizer.py  stabilizer.py  types.py
gesturecam/models/: __init__.py  downloader.py  registry.py
gesturecam/quality/: __init__.py  blur.py  enhancement.py  metrics.py  scoring.py
gesturecam/services/: __init__.py  calibration.py  capture_service.py  engine.py  events.py  factory.py
gesturecam/storage/: __init__.py  database.py  models.py
gesturecam/ui/: __init__.py  app.py  calibration_window.py  gallery_window.py  settings_window.py  theme.py  widgets.py
gesturecam/video/: __init__.py  recorder.py
scripts/: download_models.py
tests/: test_calibration.py  test_config.py  test_face_analysis.py  test_face_mesh.py  test_gesture_classifier.py  test_gesture_stabilizer.py  test_quality_blur.py  test_quality_metrics.py  test_quality_scoring.py  test_storage.py
