[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gesturecam-pro"
version = "1.0.0"
description = "Touchless camera control through real-time hand-gesture recognition."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GestureCam Pro contributors" }]
keywords = ["computer-vision", "gestures", "mediapipe", "opencv", "camera"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

# Runtime dependencies. The pure-logic core needs only numpy + Pillow; the
# extras below pull in the heavy, hardware-facing pieces.
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Everything needed to actually run the live application.
ai = [
    "opencv-python>=4.8",
    "mediapipe>=0.10.9",
    "customtkinter>=5.2",
    "pyttsx3>=2.90",
]
# Optional background removal.
bg = [
    "rembg>=2.0",
    "onnxruntime>=1.16",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
gesturecam = "gesturecam.app:main"

[project.urls]
Homepage = "https://example.com/gesturecam-pro"
Repository = "https://example.com/gesturecam-pro"

[tool.setuptools.packages.find]
include = ["gesturecam*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "S", "T20"]
ignore = [
    "S101",   # asserts are fine in this codebase / tests
    "SIM105", # contextlib.suppress is not always clearer
    "UP042",  # `str, Enum` is intentional for transparent JSON serialisation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]
"gesturecam/ui/*" = ["T201"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_subclassing_any = false
warn_return_any = false
warn_unused_ignores = false
no_implicit_optional = true

# CustomTkinter base classes are untyped, so relax the UI layer where strict
# typing would only produce noise from third-party subclassing.
[[tool.mypy.overrides]]
module = "gesturecam.ui.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
